# openapi_om

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: python-app.yml  python-tests.yml
openapi_om/: __init__.py  cli.py  enums.py  openapi.py  utils.py
src/openapi_om/: openapi.py
src/openapy/: __init__.py  enums.py  openapi.py  paths.py  schema.py  server.py  tags.py  utils.py
tests/: test_openapi.py  test_tag.py  test_utils.py
