[tool.poetry]
name = "openapi_om"
version = "0.1.1"
description = ""
authors = ["Serj Zavadsky <fevral13@gmail.com>"]

[tool.poetry.scripts]
openapi_om_cli = "openapi_om.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6"
mypy = "*"
pydantic = "^2"

[tool.poetry.dev-dependencies]
pytest = "^7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
